--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "rtlcss-webpack-plugin": "^4.0.6",
     "socicon": "^3.0.5",
     "sweetalert2": "^9.10.12",
+    "v-calendar": "^3.0.0-alpha.6",
     "vee-validate": "^4.2.1",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.2",
